--- a/src/app.css
+++ b/src/app.css
@@ -21,3 +21,13 @@ body, html {
 .font-loaded .font-creepster {
   visibility: visible;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield; /* Firefox */
+  appearance: textfield; /* Other browsers */
+}
